tests/neg-custom-args/captures/widen-reach.check
-- Error: tests/neg-custom-args/captures/widen-reach.scala:8:18 --------------------------------------------------------
8 |trait Bar extends Foo[IO^]: // error
  |                  ^^^^^^^^
  |                  Type variable T of trait Foo cannot be instantiated to IO^ since
  |                  that type captures the root capability `cap`.
  |
  |                  where:    ^ refers to the universal root capability
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/widen-reach.scala:9:24 -----------------------------------
9 |  val foo: IO^ -> IO^ = x => x // error
  |                        ^^^^^^
  |                Found:    (x: IO^) ->'s1 IO^²
  |                Required: IO^ -> IO^³
  |
  |                Note that capability cap is not included in capture set {cap²}
  |                because cap is not visible from cap² in value foo.
  |
  |                where:    ^           refers to the universal root capability
  |                          ^² and cap  refer to a root capability associated with the result type of (x: IO^): IO^²
  |                          ^³ and cap² refer to a root capability in the type of value foo
  |
  | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/widen-reach.scala:13:26 ----------------------------------
13 |  val y2: IO^ -> IO^ = y1.foo      // error
   |                       ^^^^^^
   |                       Found:    IO^ ->{x*} IO^{x*}
   |                       Required: IO^ -> IO^²
   |
   |                       Note that capability x* is not included in capture set {}.
   |
   |                       where:    ^  refers to the universal root capability
   |                                 ^² refers to a root capability in the type of value y2
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/widen-reach.scala:14:30 ----------------------------------
14 |  val y3: IO^ -> IO^{x*} = y1.foo  // error
   |                           ^^^^^^
   |                           Found:    IO^ ->{x*} IO^{x*}
   |                           Required: IO^ -> IO^{x*}
   |
   |                           Note that capability x* is not included in capture set {}.
   |
   |                           where:    ^ refers to the universal root capability
   |
   | longer explanation available when compiling with `-explain`
